Fix: alignment of calendar buttons.

--- a/less/settingspane.less
+++ b/less/settingspane.less
@@ -141,7 +141,8 @@
 }
 
 .cal-link {
-  padding: 0
+  padding: 0;
+  text-align: left;
 }
 
 .cal-link-in-progress {
